--- a/golfcart_2dnav/config/global_costmap_params.yaml
+++ b/golfcart_2dnav/config/global_costmap_params.yaml
@@ -1,5 +1,7 @@
-global_costmap:
- global_frame: /map
- robot_base_frame: base_link
- update_frequency: 5.0
- static_map: true
+global_frame: odom
+rolling_window: true
+track_unknown_space: true
+
+plugins:
+  - {name: obstacles_laser,           type: "costmap_2d::ObstacleLayer"}
+  - {name: inflation,                 type: "costmap_2d::InflationLayer"}
