Odom to base_link transformation node added.

--- a/golfcart_gazebo/CMakeLists.txt
+++ b/golfcart_gazebo/CMakeLists.txt
@@ -1,7 +1,13 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(golfcart_gazebo)
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED roscpp tf)
 catkin_package()
+
+add_executable(odom_transformation_node src/odom_transformation_node.cpp)
+
+target_link_libraries(odom_transformation_node
+  ${catkin_LIBRARIES}
+ )
 
 install(PROGRAMS
    nodes/ackermann_controller.py
