Cleaned project. Added catkin default include dirs.

--- a/golfcart_description/package.xml
+++ b/golfcart_description/package.xml
@@ -2,24 +2,15 @@
 <package>
   <name>golfcart_description</name>
   <version>0.1.0</version>
-  <description>
-    Golfcart.
-    The model has been enhanced with sensors.
-  </description>
-  <maintainer email="a.sagitov@innopolis.ru">
-    Artur
-  </maintainer>
-  <license>Apache 2.0</license>
-
-  <author email="a.sagitov@innopolis.ru">Artur</author>
-
+  <description>Golfcart model with ackermann steering</description>
+  <maintainer email="ya.sagitov@gmail.com">Sagitov Artur</maintainer>
+  <license>MIT</license>
+  <author email="ya.sagitov@gmail.com">Artur</author>
   <buildtool_depend>catkin</buildtool_depend>
-
   <run_depend>joint_state_publisher</run_depend>
   <run_depend>robot_state_publisher</run_depend>
   <run_depend>rviz</run_depend>
   <run_depend>xacro</run_depend>
-
   <export>
     <architecture_independent/>
   </export>
