--- a/golfcart_gazebo/CMakeLists.txt
+++ b/golfcart_gazebo/CMakeLists.txt
@@ -1,7 +1,12 @@
 cmake_minimum_required(VERSION 2.8.3)
+
 project(golfcart_gazebo)
+
 find_package(catkin REQUIRED roscpp tf)
+
 catkin_package()
+
+include_directories(${catkin_INCLUDE_DIRS})
 
 add_executable(odom_transformation_node src/odom_transformation_node.cpp)
 
