--- a/golfcart_gazebo/package.xml
+++ b/golfcart_gazebo/package.xml
@@ -2,18 +2,11 @@
 <package>
   <name>golfcart_gazebo</name>
   <version>0.1.0</version>
-  <description>
-    Golfcart is used with Gazebo to simulate a vehicle with
-    Ackermann steering.
-  </description>
-  <maintainer email="a.sagitov@innopolis.ru">
-    Artur
-  </maintainer>
-  <license>Apache 2.0</license>
-  <author email="a.sagitov@innopolis.ru">Artur</author>
-
+  <description>Golfcart is used within Gazebo to simulate a vehicle with Ackermann steering.</description>
+  <maintainer email="ya.sagitov@gmail.com">Sagitov Artur</maintainer>
+  <license>MIT</license>
+  <author email="ya.sagitov@gmail.com">Artur</author>
   <buildtool_depend>catkin</buildtool_depend>
-
   <run_depend>ackermann_msgs</run_depend>
   <run_depend>ackermann_vehicle_description</run_depend>
   <run_depend>controller_manager</run_depend>
@@ -23,7 +16,6 @@
   <run_depend>std_msgs</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>xacro</run_depend>
-
   <export>
     <architecture_independent/>
   </export>
